# mmseg_pkg

./: Dockerfile  README.md  package.xml
action/: mmSegmentation.action
config/: cfg.yaml  cfg_thermal.yaml
include/mmseg_deploy/: NetTorch.cpp  NetTorch.hpp  mmseg_handler.hpp
launch/: mmseg_start_all.launch  mmseg_start_rgb.launch  mmseg_start_thermal.launch  play_rosbag.launch
mmseg_deploy/: CMakeLists.txt
mmseg_deploy/config/: cfg.yaml
mmseg_deploy/include/mmseg_deploy/: NetTorch.cpp  mmseg_handler.hpp
mmseg_deploy/launch/: mmseg_start_rgb.launch  play_rosbag.launch
mmseg_deploy/src/: mmseg_handler.cpp
mmseg_deploy/srv/: mmSegmentation.srv
src/: mmseg_handler.cpp  node.cpp
