<?xml version="1.0"?>
<package format="2">
  <name>mmseg_deploy</name>
  <version>0.0.0</version>
  <description>ROS Nodes for object segmentation using efficientdet with pytorch</description>
   <maintainer email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</maintainer>
  <author email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>boost</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>message_runtime</depend>

  <!-- <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend> -->



</package>
